--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
             android:theme="@style/Theme.ToySwapApp"
             tools:targetApi="31">
         <activity
-                android:name=".ui.MainActivity"
+                android:name=".ui.addlisting.AddListingActivity"
+                android:exported="false"/>
+        <activity
+                android:name=".ui.mainactivity.MainActivity"
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
