--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
             android:theme="@style/Theme.ToySwapApp"
             tools:targetApi="31">
         <activity
+                android:name=".ui.login.SignUpActivity"
+                android:exported="false"/>
+        <activity
+                android:name=".ui.login.LoginActivity"
+                android:exported="false"/>
+        <activity
                 android:name=".ui.addlisting.AddListingActivity"
                 android:exported="false"/>
         <activity
