feat: RV items can be clicked, will transition to a hardcoded view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
                 android:name=".ui.addlisting.AddListingActivity"
                 android:exported="false"/>
         <activity
+                android:name=".ui.listing.ViewListingActivity"
+                android:exported="false" />
+        <activity
                 android:name=".ui.mainactivity.MainActivity"
                 android:exported="true">
             <intent-filter>
