--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
             android:theme="@style/Theme.ToySwapApp"
             android:usesCleartextTraffic="true"
             tools:targetApi="31">
+        <activity
+                android:name=".ui.listing.AddCommentActivity"
+                android:exported="false"/>
 
         <meta-data
                 android:name="com.google.android.geo.API_KEY"
