--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
             android:usesCleartextTraffic="true"
             tools:targetApi="31">
         <activity
+                android:name=".ui.updatelisting.UpdateListingActivity"
+                android:exported="false"/>
+        <activity
                 android:name=".ui.listing.AddCommentActivity"
                 android:exported="false"/>
 
