--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.springsamurais.toyswap">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission
+            android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+            android:maxSdkVersion="28"/>
 
     <uses-feature
             android:name="android.hardware.camera"
             android:required="false"/>
     <uses-feature android:name="android.hardware.camera.any"/>
-
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission
-            android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-            android:maxSdkVersion="28"/>
 
     <application
             android:allowBackup="true"
@@ -28,6 +28,7 @@
             android:theme="@style/Theme.ToySwapApp"
             android:usesCleartextTraffic="true"
             tools:targetApi="31">
+
         <activity
                 android:name=".ui.listing.AddCommentActivity"
                 android:exported="false"/>
@@ -44,7 +45,12 @@
                 android:exported="false"/>
         <activity
                 android:name=".ui.login.LoginActivity"
-                android:exported="false"/>
+                android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
         <activity
                 android:name=".ui.addlisting.AddListingActivity"
                 android:exported="false"/>
@@ -56,8 +62,7 @@
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
     </application>
